src/app/component/eco-news/components/news-list/news-list-gallery-view/news-list-gallery-view.component.scss
$bp-smallest: 575px;
$bp-phone: 767px;
$bp-tablet: 991px;
$bp-desktop: 1199px;

p,
div {
  margin: 0;
  padding: 0;
}

.list-gallery {
  width: 359px;
  min-height: 500px;
  box-shadow: 1px 1px 12px rgba(27, 51, 38, 0.15);
  background: #fff;
  border-radius: 4px;
  display: flex;
  flex-direction: column;

  .list-image {
    .list-image-content {
      object-fit: cover;
      width: 100%;
      height: 206px;
      border-top-left-radius: 4px;
      border-top-right-radius: 4px;
    }
  }

  .list-gallery-content {
    position: relative;
    margin: 8px 24px 24px 24px;
    flex-grow: 1;

    .filter-tag {
      display: flex;
      flex-direction: row;
      flex-wrap: wrap;
      height: 24px;
      margin-bottom: 8px;

      .ul-eco-buttons {
        font-family: var(--primary-font);
        font-size: 14px;
        line-height: 16px;
        color: var(--primary-green);
        margin-right: 16px;
        letter-spacing: 1px;
        text-transform: uppercase;
      }
    }

    .added-data {
      max-height: 200px;
      overflow: hidden;
      position: relative;

      .title-list {
        max-height: 52px;
        overflow: hidden;
        font-family: var(--secondary-font);
        font-style: normal;
        font-weight: 500;
        font-size: 21px;
        line-height: 26px;
        color: var(--secondary-dark-grey);
      }

      .list-text {
        max-height: 150px;
        overflow: hidden;
        margin: 10px 0 0 0;
        font-family: var(--primary-font);
        font-size: 14px;
        line-height: 21px;
        color: var(--secondary-dark-grey);
        white-space: pre-wrap;
      }
    }

    .word-wrap {
      word-break: break-word;
    }

    .user-data-added-news {
      position: absolute;
      bottom: 0;
      display: flex;
      flex-wrap: wrap;
    }

    .user-data-text-date {
      margin-right: 16px;
      font-family: var(--primary-font);
      font-size: 14px;
      line-height: 21px;
      color: var(--secondary-grey);
      mix-blend-mode: normal;
      opacity: 0.6;

      .icon {
        align-items: center;
        margin-right: 4px;
      }
    }

    .user-data-text-date:nth-child(2) {
      max-height: 26px;
      display: block;
      white-space: nowrap;
      max-width: 110px;
      overflow: hidden;
      text-overflow: ellipsis;
    }
  }
}

.list-gallery:hover {
  background: #fff;
  box-shadow: 0 4px 32px #e6ebea;
  border-radius: 4px;
  cursor: pointer;
}

@media screen and (max-width: $bp-desktop) {
  .list-gallery {
    width: 299px;
    min-height: 500px;

    .list-image {
      .list-image-content {
        height: 172px;
      }
    }

    .list-gallery-content {
      .added-data {
        height: 196px;
      }
    }
  }
}

@media screen and (max-width: $bp-tablet) {
  .list-gallery {
    width: 353px;
    min-height: 500px;

    .list-image {
      .list-image-content {
        height: 202px;
      }
    }

    .list-gallery-content {
      .added-data {
        height: 203px;
      }
    }
  }
}

@media screen and (max-width: $bp-phone) {
  .list-gallery {
    width: 258px;
    height: 508px;

    .list-image {
      .list-image-content {
        height: 147px;
      }
    }

    .list-gallery-content {
      .added-data {
        height: 222px;

        .title-list {
          font-size: 18px;
          line-height: 24px;
        }
      }
    }

    .user-data-added-news {
      display: flex;
      flex-direction: column;

      .user-data-text-date:first-child {
        margin-bottom: 4px;
        min-width: 100px;
      }
    }
  }
}

@media screen and (max-width: $bp-smallest) {
  .list-gallery {
    width: 288px;
    height: 508px;

    .list-image {
      .list-image-content {
        height: 166px;
      }
    }
  }
}

